feat: Implemented the latest caching spec. All components - lexifier, normalizer, and planner - all support a DAG system.