@@ -1,73 +1,40 @@
 package com.gentoro.onemcp.orchestrator;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.gentoro.onemcp.OneMcp;
-import com.gentoro.onemcp.engine.ExecutionPlanException;
-import com.gentoro.onemcp.engine.ExecutionPlanEngine;
-import com.gentoro.onemcp.engine.OperationRegistry;
-import com.gentoro.onemcp.exception.ExceptionUtil;
-import com.gentoro.onemcp.exception.ExecutionException;
-import com.gentoro.onemcp.exception.HandbookException;
-import com.gentoro.onemcp.handbook.model.agent.Api;
-import com.gentoro.onemcp.indexing.GraphContextTuple;
-import com.gentoro.onemcp.memory.ValueStore;
-import com.gentoro.onemcp.messages.AssigmentResult;
-import com.gentoro.onemcp.messages.AssignmentContext;
-import com.gentoro.onemcp.cache.Lexifier;
 import com.gentoro.onemcp.cache.ConceptualLexicon;
-import com.gentoro.onemcp.cache.PromptSchemaNormalizer;
+import com.gentoro.onemcp.cache.ExecutionPlanCache;
+import com.gentoro.onemcp.cache.Lexifier;
 import com.gentoro.onemcp.cache.PromptSchema;
-import com.gentoro.onemcp.cache.ValueConverter;
-import com.gentoro.onemcp.cache.dag.DagPlan;
-import com.gentoro.onemcp.cache.dag.DagPlanCache;
+import com.gentoro.onemcp.cache.PromptSchemaNormalizer;
 import com.gentoro.onemcp.cache.dag.DagPlanner;
-import com.gentoro.onemcp.cache.dag.DagExecutor;
-import com.gentoro.onemcp.orchestrator.progress.NoOpProgressSink;
-import com.gentoro.onemcp.orchestrator.progress.ProgressSink;
+import com.gentoro.onemcp.plan.ExecutionPlan;
+import com.gentoro.onemcp.engine.ExecutionPlanEngine;
+import com.gentoro.onemcp.engine.ExecutionPlanException;
+import com.gentoro.onemcp.engine.OperationRegistry;
+import com.gentoro.onemcp.exception.ExecutionException;
+import com.gentoro.onemcp.handbook.Handbook;
+import com.gentoro.onemcp.memory.ValueStore;
+import com.gentoro.onemcp.openapi.OpenApiProxy;
+import com.gentoro.onemcp.openapi.OpenApiProxyImpl;
 import com.gentoro.onemcp.utility.JacksonUtility;
 import com.gentoro.onemcp.utility.StdoutUtility;
 import com.gentoro.onemcp.utility.StringUtility;
-import java.io.IOException;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.HashMap;
-import java.util.UUID;
-import java.util.concurrent.TimeUnit;
 import java.util.Map;
-import java.nio.file.Paths;
-import java.util.*;
+import java.util.Scanner;
+import java.util.concurrent.atomic.AtomicInteger;
 
 public class OrchestratorService {
   private static final org.slf4j.Logger log =
       com.gentoro.onemcp.logging.LoggingService.getLogger(OrchestratorService.class);
 
   private final OneMcp oneMcp;
-  private final boolean cacheEnabled;
 
   public OrchestratorService(OneMcp oneMcp) {
     this.oneMcp = oneMcp;
-    
-    // Read cache enabled setting from configuration
-    // The config should already have the env var interpolated: ${env:CACHE_ENABLED:-true}
-    // Default to false (caching disabled) - legacy path is the stable default
-    boolean configValue = oneMcp.configuration().getBoolean("orchestrator.cache.enabled", false);
-    
-    // Also check environment variable directly as primary source (since config interpolation might not work)
-    // This ensures we respect the CACHE_ENABLED env var that the CLI sets
-    String cacheEnabledEnv = System.getenv("CACHE_ENABLED");
-    if (cacheEnabledEnv != null && !cacheEnabledEnv.trim().isEmpty()) {
-      // Environment variable takes precedence (CLI sets this explicitly)
-      boolean envValue = "true".equalsIgnoreCase(cacheEnabledEnv.trim());
-      this.cacheEnabled = envValue;
-      log.info("Orchestrator cache enabled: {} (from CACHE_ENABLED env var, config was: {})", 
-          this.cacheEnabled, configValue);
-    } else {
-      // No env var set, use config value
-      this.cacheEnabled = configValue;
-      log.info("Orchestrator cache enabled: {} (from config orchestrator.cache.enabled, env var not set)", 
-          this.cacheEnabled);
-    }
   }
 
   public void enterInteractiveMode() {
@@ -97,7 +64,7 @@ public class OrchestratorService {
         // Handle normal input
         if (input.trim().length() > 10) {
           try {
-            handlePrompt(input);
+            handlePrompt(input, true);
           } catch (Exception e) {
             log.error("Error handling prompt", e);
             StdoutUtility.printError(oneMcp, "Could not handle assignment properly", e);
@@ -112,859 +79,776 @@ public class OrchestratorService {
     }
   }
 
-  public AssigmentResult handlePrompt(String prompt) {
-    return handlePrompt(prompt, new NoOpProgressSink());
+  public String handlePrompt(String prompt) {
+    return handlePrompt(prompt, false);
   }
 
-  /**
-   * Handle a natural language prompt request and return a structured result, emitting optional
-   * progress updates through the provided {@link ProgressSink}.
-   * 
-   * <p>Routes to either:
-   * <ul>
-   *   <li>Legacy path: Uses orchestrator.PlanGenerationService (stable, default)
-   *   <li>Caching path: Uses Planner + cache package (experimental, when CACHE_ENABLED=true)
-   * </ul>
-   */
-  public AssigmentResult handlePrompt(String prompt, ProgressSink progress) {
+  public String handlePrompt(String prompt, boolean interactive) {
     log.trace("Processing prompt: {}", prompt);
 
-    if (oneMcp.handbook().apis().isEmpty()) {
-      throw new HandbookException(
-          "Cannot handle assignments just yet, there are no APIs loaded. "
-              + "Review your handbook configuration and publish your APIs.");
-    }
-
-    // Use the cache enabled setting determined at startup
-    if (cacheEnabled) {
-    return handlePromptWithCache(prompt, progress);
-    } else {
-      return handlePromptLegacy(prompt, progress);
-    }
-  }
-
-  /**
-   * Legacy path: Uses orchestrator.PlanGenerationService (unchanged implementation).
-   * This is the stable, production-ready path.
-   */
-  private AssigmentResult handlePromptLegacy(String prompt, ProgressSink progress) {
-
-    // Generate execution ID and start execution tracking
-    String executionId = UUID.randomUUID().toString();
+    // Generate unique execution ID and start tracking
+    String executionId = java.util.UUID.randomUUID().toString();
     String reportPath = oneMcp.inferenceLogger().startExecution(executionId, prompt);
 
-    final List<String> calledOperations = new ArrayList<>();
-    final List<AssigmentResult.Assignment> assignmentParts = new ArrayList<>();
-    final long start = System.currentTimeMillis();
-    AssignmentContext assignmentContext = null;
     OrchestratorContext ctx = new OrchestratorContext(oneMcp, new ValueStore());
-    boolean success = false;
-    try {
-      // annotate root span with incoming prompt (truncated to avoid sensitive data)
-      TelemetryTracer tracer = ctx.tracer();
-      if (tracer.current() != null) {
-        String promptPreview = prompt.length() > 500 ? prompt.substring(0, 500) + "…" : prompt;
-        tracer.current().attributes.put("prompt.preview", promptPreview);
-      }
-
-      // Extract entities stage
-      progress.beginStage("extract", "Extracting entities", 1);
-      StdoutUtility.printNewLine(oneMcp, "Extracting entities.");
-      assignmentContext = new EntityExtractionService(ctx).extractContext(prompt.trim());
-      int entityCount =
-          assignmentContext.getContext() == null ? 0 : assignmentContext.getContext().size();
-      progress.endStageOk("extract", Map.of("entities", entityCount));
-
-      List<Map<String, Object>> retrievedContextualData =
-          oneMcp
-              .graphService()
-              .retrieveByContext(
-                  assignmentContext.getContext().stream()
-                      .map(c -> new GraphContextTuple(c.getEntity(), c.getOperations()))
-                      .toList());
-
-      // Plan generation stage
-      progress.beginStage("plan", "Generating execution plan", 1);
-      StdoutUtility.printNewLine(oneMcp, "Generating execution plan.");
-      JsonNode plan =
-          new PlanGenerationService(ctx).generatePlan(assignmentContext, retrievedContextualData);
-      String planJson = JacksonUtility.toJson(plan);
-      StdoutUtility.printSuccessLine(
-          oneMcp, "Generated plan:\n%s".formatted(StringUtility.formatWithIndent(planJson, 4)));
-      log.trace("Generated plan:\n{}", StringUtility.formatWithIndent(planJson, 4));
-      int steps = plan.has("steps") && plan.get("steps").isArray() ? plan.get("steps").size() : 0;
-      progress.endStageOk("plan", Map.of("steps", steps));
-
-      // Log execution plan for reporting (will be updated with cache status later)
-      // Don't log here - wait until we know the cache status
-
-      // Prepare operations stage (we can't know execution count precisely here)
-      OperationRegistry operationRegistry = new OperationRegistry();
-      for (Api api : ctx.handbook().apis().values()) {
-        api.getService()
-            .getInvokers()
-            .forEach(
-                (key, value) -> {
-                  operationRegistry.register(
-                      key,
-                      (data) -> {
-                        try {
-                          long opStart = System.currentTimeMillis();
-                          ctx.tracer().startChild("operation: %s.%s".formatted(api.getSlug(), key));
-                          calledOperations.add("%s.%s".formatted(api.getSlug(), key));
-                          log.trace(
-                              "Invoking operation {} with data {}",
-                              key,
-                              JacksonUtility.toJson(data));
-                          StdoutUtility.printRollingLine(
-                              oneMcp, "Invoking operation %s".formatted(key));
-
-                          // Set inference logger on invoker to log API calls
-                          value.setInferenceLogger(oneMcp.inferenceLogger());
-                          JsonNode result =
-                              value.invoke(data.has("data") ? data.get("data") : data);
-                          long opEnd = System.currentTimeMillis();
-                          ctx.tracer()
-                              .endCurrentOk(
-                                  Map.of(
-                                      "service",
-                                      api.getSlug(),
-                                      "operation",
-                                      key,
-                                      "latencyMs",
-                                      (opEnd - opStart)));
-                          return result;
-                        } catch (Exception e) {
-                          log.error(
-                              "Error invoking service {} with data {}",
-                              key,
-                              JacksonUtility.toJson(data),
-                              e);
-                          ctx.tracer()
-                              .endCurrentError(
-                                  Map.of(
-                                      "service",
-                                      api.getSlug(),
-                                      "operation",
-                                      key,
-                                      "error",
-                                      e.getClass().getSimpleName() + ": " + e.getMessage()));
-                          throw new ExecutionPlanException(
-                              "Error invoking service %s".formatted(key), e);
-                        }
-                      });
-                });
-      }
-
-      // Execute plan stage
-      progress.beginStage("exec", "Executing plan", calledOperations.size());
-      StdoutUtility.printNewLine(oneMcp, "Executing plan.");
-      ExecutionPlanEngine engine =
-          new ExecutionPlanEngine(JacksonUtility.getJsonMapper(), operationRegistry);
-      ctx.tracer().startChild("execution_plan");
-      JsonNode output;
-      try {
-        output = engine.execute(plan, null);
-        ctx.tracer().endCurrentOk(Map.of("engine", "ExecutionPlanEngine"));
-        progress.endStageOk("exec", Map.of("engine", "ExecutionPlanEngine"));
-      } catch (Exception ex) {
-        ctx.tracer()
-            .endCurrentError(
-                Map.of("engine", "ExecutionPlanEngine", "error", ex.getClass().getSimpleName()));
-        progress.endStageError(
-            "exec", ex.getClass().getSimpleName(), Map.of("engine", "ExecutionPlanEngine"));
-        throw ex;
-      }
-      String outputStr = JacksonUtility.toJson(output);
-
-      log.trace("Generated answer:\n{}", StringUtility.formatWithIndent(outputStr, 4));
-      StdoutUtility.printSuccessLine(
-          oneMcp,
-          "Assignment handled in (%s ms)\nAnswer: \n%s"
-              .formatted(
-                  (System.currentTimeMillis() - start),
-                  StringUtility.formatWithIndent(outputStr, 4)));
-
-      if (assignmentContext.getUnhandledParts() != null
-          && !assignmentContext.getUnhandledParts().isEmpty()) {
-        assignmentParts.add(
-            new AssigmentResult.Assignment(
-                false, assignmentContext.getUnhandledParts(), false, null));
-      }
-      assignmentParts.add(
-          new AssigmentResult.Assignment(
-              true, assignmentContext.getRefinedAssignment(), false, outputStr));
-      success = true;
-
-      // Log final response
-      oneMcp.inferenceLogger().logFinalResponse(outputStr);
-    } catch (Exception e) {
-      StdoutUtility.printError(oneMcp, "Could not handle assignment properly", e);
-      assignmentParts.add(
-          new AssigmentResult.Assignment(
-              true, prompt, true, ExceptionUtil.formatCompactStackTrace(e)));
-      success = false;
-      throw e;
-    }
-
-    // Build the result before completing execution so we can log it
-    long totalTimeMs = System.currentTimeMillis() - start;
-    AssigmentResult.Statistics stats =
-        new AssigmentResult.Statistics(
-            ctx.tracer().promptTokens(),
-            ctx.tracer().completionTokens(),
-            ctx.tracer().totalTokens(),
-            totalTimeMs,
-            calledOperations,
-            ctx.tracer().toTrace());
-    progress.beginStage("finalize", "Finalizing response", 1);
-    progress.endStageOk(
-        "finalize",
-        Map.of(
-            "totalTimeMs",
-            totalTimeMs,
-            "promptTokens",
-            ctx.tracer().promptTokens(),
-            "completionTokens",
-            ctx.tracer().completionTokens(),
-            "totalTokens",
-            ctx.tracer().totalTokens()));
-    AssigmentResult result = new AssigmentResult(assignmentParts, stats, assignmentContext);
+    long start = System.currentTimeMillis();
     
-    // Log the assignment result for the report (before completing execution)
-    oneMcp.inferenceLogger().logAssigmentResult(result);
-    
-    // Complete execution tracking (this generates the report)
-    oneMcp.inferenceLogger().completeExecution(executionId, totalTimeMs, success);
-    
-    return result;
-  }
-
-  /**
-   * EXPERIMENTAL: Caching path using Prompt Schema (PS) normalization.
-   * 
-   * <p>This is an experimental feature that requires CACHE_ENABLED=true to activate.
-   * 
-   * <p>Flow: Prompt → Normalize (PS) → Canonicalize → Cache Key → Planner → TypeScript → Execute → Cache result
-   */
-  private AssigmentResult handlePromptWithCache(String prompt, ProgressSink progress) {
-    // Generate execution ID and start execution tracking
-    String executionId = UUID.randomUUID().toString();
-    String reportPath = oneMcp.inferenceLogger().startExecution(executionId, prompt);
-
-    final List<String> calledOperations = new ArrayList<>();
-    final List<AssigmentResult.Assignment> assignmentParts = new ArrayList<>();
-    final long start = System.currentTimeMillis();
+    String result = null;
     boolean success = false;
     
-    // Get handbook path
-    Path handbookPath = oneMcp.handbook().location();
-    if (handbookPath == null) {
-      throw new HandbookException("Handbook location is not available");
-    }
-
     try {
-      // Determine cache directories
-      Path cacheDir = getCacheDirectory(handbookPath);
-      Path endpointInfoDir = cacheDir.resolve("endpoint_info");
+      // ═══════════════════════════════════════════════════════════════════════
+      // NEW FLOW: Normalize → Cache Lookup → (Generate if miss) → Execute
+      // ═══════════════════════════════════════════════════════════════════════
       
-      // 1. Load conceptual lexicon
-      progress.beginStage("lexicon", "Loading Conceptual Lexicon", 1);
-      StdoutUtility.printNewLine(oneMcp, "Loading conceptual lexicon.");
+      Path handbookPath = getHandbookPath(ctx);
+      if (handbookPath == null) {
+        throw new ExecutionException("No handbook path available. Set HANDBOOK_DIR or configure a handbook.");
+      }
       
-      ConceptualLexicon lexicon;
+      // Load lexicon (auto-generate if missing)
+      Lexifier lexifier = new Lexifier(oneMcp);
+      ConceptualLexicon lexicon = null;
+      
       try {
-        Lexifier lexifier = new Lexifier(oneMcp);
         lexicon = lexifier.loadLexicon();
       } catch (Exception e) {
-        // Wrap other exceptions with cause message included
-        String errorMsg = "Failed to load conceptual lexicon: " + e.getMessage();
-        if (e.getCause() != null && e.getCause().getMessage() != null) {
-          errorMsg += " (Caused by: " + e.getCause().getMessage() + ")";
+        // Lexicon not found - auto-generate it
+        log.info("Lexicon not found. Auto-generating from handbook...", e);
+        StdoutUtility.printNewLine(oneMcp, "Generating lexicon from handbook...");
+        
+        try {
+          lexicon = lexifier.extractLexicon();
+          log.info("Lexicon auto-generated");
+          StdoutUtility.printNewLine(oneMcp, 
+              String.format("Lexicon generated: %d actions, %d entities, %d fields",
+                  lexicon.getActions() != null ? lexicon.getActions().size() : 0,
+                  lexicon.getEntities() != null ? lexicon.getEntities().size() : 0,
+                  lexicon.getFields() != null ? lexicon.getFields().size() : 0));
+        } catch (Exception ex) {
+          log.error("Failed to auto-generate lexicon", ex);
+          throw new ExecutionException("Lexicon not found and failed to auto-generate: " + 
+              ex.getMessage() + ". You can manually run 'onemcp lexify' to generate it.", ex);
         }
-        throw new HandbookException(errorMsg + ". Run 'index' command first.", e);
       }
-      if (lexicon == null || lexicon.getEntities().isEmpty()) {
-        throw new HandbookException(
-            "Lexicon is empty. Please run the 'index' command to generate the lexicon from your handbook.");
-      }
-      progress.endStageOk("lexicon", Map.of("entities", lexicon.getEntities().size(), 
-          "fields", lexicon.getFields().size()));
-
-      // 2. Normalize prompt to Prompt Schema (PS)
-      progress.beginStage("normalize", "Normalizing prompt to PS", 1);
-      StdoutUtility.printNewLine(oneMcp, "Normalizing prompt to PS.");
+      
+      // ─────────────────────────────────────────────────────────────────────
+      // STEP 1: NORMALIZE - Convert prompt to PromptSchema
+      // ─────────────────────────────────────────────────────────────────────
+      // Note: Phase boundaries are logged by PromptSchemaNormalizer with attempt numbers
+      StdoutUtility.printNewLine(oneMcp, "Normalizing prompt...");
+      long normalizeStart = System.currentTimeMillis();
       
       PromptSchemaNormalizer normalizer = new PromptSchemaNormalizer(oneMcp);
-      PromptSchema ps;
+      PromptSchema schema = normalizer.normalize(prompt.trim(), lexicon);
+      
+      // Check for failure (operation is null)
+      // Check action (spec v21) or fall back to operation (legacy)
+      String action = schema != null ? schema.getAction() : null;
+      if (schema == null || action == null || action.trim().isEmpty()) {
+        String errorMessage = schema != null && schema.getNote() != null 
+            ? schema.getNote() 
+            : "The prompt does not appear to be related to the operations supported by the API";
+        long normalizeDuration = System.currentTimeMillis() - normalizeStart;
+        ExecutionException ex = new ExecutionException(errorMessage);
+        StdoutUtility.printError(oneMcp, errorMessage, ex);
+        log.warn("Normalization failed for prompt: {} - {}", prompt, errorMessage);
+        throw ex;
+      }
+      
+      if (schema.getCacheKey() == null) {
+        throw new ExecutionException("Cache key is null after normalization");
+      }
+      
+      long normalizeDuration = System.currentTimeMillis() - normalizeStart;
+      StdoutUtility.printSuccessLine(oneMcp,
+          "Normalization completed in (%d ms). PSK: %s".formatted(normalizeDuration, schema.getCacheKey()));
+      log.info("Normalized prompt to PSK: {} in {}ms", schema.getCacheKey(), normalizeDuration);
+      
+      // Log normalized schema for reporting
       try {
-        ps = normalizer.normalize(prompt, lexicon);
+        String schemaJson = JacksonUtility.getJsonMapper().writeValueAsString(schema);
+        oneMcp.inferenceLogger().logNormalizedPromptSchemaForExecution(schemaJson, normalizeDuration, executionId);
       } catch (Exception e) {
-        // Normalization threw an exception (e.g., JSON parsing error)
-        String errorMsg = ExceptionUtil.extractErrorMessage(e);
-        log.error("Normalization exception: {}", errorMsg, e);
-        progress.endStageError("normalize", "NORMALIZATION_EXCEPTION", Map.of("error", errorMsg));
-        
-        // Log the error to execution plan so it appears in EXECUTION RESULT section
-        try {
-          Map<String, Object> errorPlanData = new HashMap<>();
-          errorPlanData.put("operation", "normalization_failed");
-          errorPlanData.put("error", errorMsg);
-          errorPlanData.put("prompt", prompt);
-          String errorPlanJson = JacksonUtility.getJsonMapper().writeValueAsString(errorPlanData);
-          oneMcp.inferenceLogger().logExecutionPlanNew(errorPlanJson, null, errorMsg, false);
-        } catch (Exception logErr) {
-          log.warn("Failed to log normalization error to execution plan", logErr);
-        }
-        
-        // Log the assignment result and complete execution BEFORE returning
-        // This ensures the report is generated even when normalization fails early
-        AssignmentContext context = new AssignmentContext();
-        String assignmentError = "Normalization failed: " + errorMsg;
-        context.setRefinedAssignment(assignmentError);
-        AssigmentResult errorResult = new AssigmentResult(
-            java.util.Collections.emptyList(),
-            new AssigmentResult.Statistics(0, 0, 0, System.currentTimeMillis() - start, java.util.Collections.emptyList(), null),
-            context);
-        
-        // Log assignment result and complete execution to generate report
-        oneMcp.inferenceLogger().logAssigmentResult(errorResult);
-        oneMcp.inferenceLogger().completeExecution(executionId, System.currentTimeMillis() - start, false);
-        
-        return errorResult;
+        log.debug("Failed to log normalized schema", e);
       }
       
-      // Check if normalization failed
-      boolean normalizationFailed = ps.getOperation() == null || ps.getOperation().trim().isEmpty();
-      String normalizationNote = ps.getNote();
+      // ─────────────────────────────────────────────────────────────────────
+      // STEP 2: CACHE LOOKUP
+      // ─────────────────────────────────────────────────────────────────────
+      ExecutionPlanCache cache = new ExecutionPlanCache(handbookPath);
+      long cacheLookupStart = System.currentTimeMillis();
+      String cacheKey = schema.getCacheKey();
+      java.util.Optional<ExecutionPlanCache.CachedPlanResult> cachedResult = cache.lookupByCacheKey(cacheKey);
+      long cacheLookupDuration = System.currentTimeMillis() - cacheLookupStart;
       
-      if (normalizationFailed) {
-        String errorMsg = normalizationNote != null && !normalizationNote.trim().isEmpty()
-            ? normalizationNote
-            : "Normalization failed: Could not convert prompt to PS";
-        log.warn("Normalization failed: {}", errorMsg);
-        progress.endStageError("normalize", "NORMALIZATION_FAILED", Map.of("note", errorMsg));
-        
-        // Log assignment result and complete execution BEFORE returning
-        // This ensures the report is generated even when normalization fails
-        AssignmentContext context = new AssignmentContext();
-        context.setRefinedAssignment(errorMsg);
-        AssigmentResult errorResult = new AssigmentResult(
-            java.util.Collections.emptyList(),
-            new AssigmentResult.Statistics(0, 0, 0, System.currentTimeMillis() - start, java.util.Collections.emptyList(), null),
-            context);
-        
-        // Log assignment result and complete execution to generate report
-        oneMcp.inferenceLogger().logAssigmentResult(errorResult);
-        oneMcp.inferenceLogger().completeExecution(executionId, System.currentTimeMillis() - start, false);
-        
-        return errorResult;
-      }
+      ExecutionPlan plan = null;
+      boolean cacheHit = cachedResult.isPresent();
+      boolean shouldRegenerate = false;
+      boolean cachedPlanFailed = false;
+      String cachedPlanError = null;
+      int cachedFailedAttempts = 0;
+      int maxRetryAttempts = 3; // Maximum number of times to retry failed plans
       
-      String cacheKey = ps.getCacheKey();
-      log.info("Normalized prompt to PS: operation={}, table={}", ps.getOperation(), ps.getTable());
-      if (normalizationNote != null && !normalizationNote.trim().isEmpty()) {
-        log.info("Normalization note (caveat): {}", normalizationNote);
-      }
-      progress.endStageOk("normalize", Map.of("operation", ps.getOperation(), "table", ps.getTable(), "cacheKey", cacheKey));
-
-      // 4. Check cache for existing plan (DAG or legacy TypeScript)
-      String dagJson = null;
-      boolean cacheHit = false;
-      DagPlan dagPlan = null;
-      
-      // Use DAG system
-      DagPlanCache dagPlanCache = new DagPlanCache(cacheDir);
-      progress.beginStage("cache", "Checking DAG cache", 1);
-      
-      Optional<DagPlanCache.CachedDagPlanResult> cachedDagResult = 
-          dagPlanCache.lookupByCacheKey(cacheKey);
-      if (cachedDagResult.isPresent()) {
-        cacheHit = true;
-        dagPlan = cachedDagResult.get().getPlan();
-        dagJson = dagPlan.toJson();
-        log.info("DAG Cache HIT for cache key: {} (executionSucceeded: {}, failedAttempts: {})", 
-            cacheKey, cachedDagResult.get().isExecutionSucceeded(), 
-            cachedDagResult.get().getFailedAttempts());
-      } else {
-        log.info("DAG Cache MISS for cache key: {}", cacheKey);
-      }
-      progress.endStageOk("cache", Map.of("hit", cacheHit));
-      
-      log.debug("Cache lookup result: hit={}, dagJson={}", cacheHit, dagJson != null ? "present" : "null");
-
-      // 5. Generate plan if cache miss
-      if (dagJson == null) {
-        // Generate DAG plan
-        progress.beginStage("plan", "Generating DAG execution plan", 1);
-        StdoutUtility.printNewLine(oneMcp, "Generating DAG execution plan from PS.");
-        
-        DagPlanner dagPlanner = new DagPlanner(oneMcp, endpointInfoDir);
-        dagJson = dagPlanner.planDag(ps, prompt);
-        dagPlan = DagPlan.fromJsonString(dagJson);
-        log.info("Generated DAG plan with {} nodes", dagPlan.getNodes().size());
-        
-        progress.endStageOk("plan", Map.of("nodes", dagPlan.getNodes().size()));
-        
-        // Cache the DAG plan
-        DagPlanCache dagPlanCacheForStore = new DagPlanCache(cacheDir);
-        dagPlanCacheForStore.storeByCacheKey(cacheKey, dagPlan, false, null);
-        log.debug("Cached newly generated DAG plan for cache key: {}", cacheKey);
-      }
-
-      // Log DAG plan for reporting (whether from cache or newly generated)
-      // CRITICAL: Always log the plan so it appears in the report
-      // If no plan but there's a note, return with just the note
-      if (dagJson == null || dagJson.trim().isEmpty()) {
-        if (normalizationNote != null && !normalizationNote.trim().isEmpty()) {
-          // Plan has no code but has a note - return with just the note
-          log.info("Plan has no code but has note: {}", normalizationNote);
-          assignmentParts.add(
-              new AssigmentResult.Assignment(
-                  true, prompt, false, normalizationNote));
-          oneMcp.inferenceLogger().logFinalResponse(normalizationNote);
-          
-          // Build the result
-          long totalTimeMs = System.currentTimeMillis() - start;
-          AssigmentResult.Statistics stats =
-              new AssigmentResult.Statistics(0, 0, 0, totalTimeMs, calledOperations, null);
-          AssigmentResult result = new AssigmentResult(assignmentParts, stats, null);
-          oneMcp.inferenceLogger().logAssigmentResult(result);
-          oneMcp.inferenceLogger().completeExecution(executionId, totalTimeMs, true);
-          return result;
+      if (cacheHit) {
+        ExecutionPlanCache.CachedPlanResult cached = cachedResult.get();
+        if (!cached.executionSucceeded) {
+          cachedPlanFailed = true;
+          cachedPlanError = cached.lastError;
+          cachedFailedAttempts = cached.failedAttempts;
+          // Cached plan previously failed - check if we should retry
+          if (cached.failedAttempts < maxRetryAttempts) {
+            log.info("Cached plan for PSK: {} previously failed ({} attempts), regenerating...", 
+                schema.getCacheKey(), cached.failedAttempts);
+            StdoutUtility.printNewLine(oneMcp, 
+                "Cached plan failed previously (attempt {}), regenerating...".formatted(cached.failedAttempts));
+            shouldRegenerate = true;
+          } else {
+            log.warn("Cached plan for PSK: {} has failed {} times (max: {}), not retrying", 
+                schema.getCacheKey(), cached.failedAttempts, maxRetryAttempts);
+            StdoutUtility.printError(oneMcp, 
+                "Plan has failed {} times, not retrying".formatted(cached.failedAttempts), null);
+            throw new ExecutionException(
+                "Cached plan has failed " + cached.failedAttempts + " times. Last error: " + 
+                (cached.lastError != null ? cached.lastError : "Unknown error"));
+          }
         } else {
-          // No plan and no note - this shouldn't happen if normalization succeeded
-          log.error("Cannot log execution plan: dagJson is null or empty and no note");
-          throw new ExecutionException("DAG plan is null - cannot proceed");
+          // Cached plan succeeded previously - use it
+          plan = cached.plan;
+          StdoutUtility.printSuccessLine(oneMcp, 
+              "✓ CACHE HIT - Reusing cached plan for: %s".formatted(schema.getCacheKey()));
+          log.info("Cache HIT for PSK: {}", schema.getCacheKey());
+          
+          // Don't log plan here - it will be logged in the execute phase
         }
       }
       
-      try {
-        // Include PS (Prompt Schema) information in the plan JSON
-        Map<String, Object> planData = new HashMap<>();
-        planData.put("dag", dagJson);
-        planData.put("operation", ps.getOperation());
-        planData.put("table", ps.getTable());
-        planData.put("fields", ps.getFields());
-        planData.put("where", ps.getWhere());
-        planData.put("group_by", ps.getGroupBy());
-        planData.put("order_by", ps.getOrderBy());
-        planData.put("limit", ps.getLimit());
-        planData.put("offset", ps.getOffset());
-        planData.put("values", ps.getValues() != null ? ps.getValues() : java.util.Collections.emptyList());
-        planData.put("columns", ps.getColumns() != null ? ps.getColumns() : java.util.Collections.emptyList());
-        planData.put("cache_key", cacheKey);
-        if (normalizationNote != null && !normalizationNote.trim().isEmpty()) {
-          planData.put("note", normalizationNote);
+      // Log cache lookup result to report (cache status is logged in execution plan event)
+      
+      // If we're regenerating, treat as cache miss for the rest of the flow
+      if (shouldRegenerate) {
+        cacheHit = false;
+        plan = null;
+      }
+      
+      // Track if this is a newly generated plan (not from cache)
+      boolean isNewlyGenerated = (plan == null);
+      String previousExecutionError = null;
+      int planGenerationAttempts = 0;
+      int maxPlanGenerationAttempts = 3;
+      boolean executionAttempted = false;
+      
+      // Always execute at least once if we have a plan, then retry if needed
+      // Loop continues if: (1) need to generate plan, OR (2) execution failed and we can retry
+      while (plan == null || !executionAttempted || (planGenerationAttempts < maxPlanGenerationAttempts && previousExecutionError != null && result == null)) {
+        if (plan == null) {
+          // ─────────────────────────────────────────────────────────────────
+          // CACHE MISS OR FAILED PLAN - Generate new plan (LLM CALL WILL HAPPEN)
+          // ─────────────────────────────────────────────────────────────────
+          int planAttempt = planGenerationAttempts + 1;
+          oneMcp.inferenceLogger().logPhaseBegin("plan-dag", planAttempt);
+          StdoutUtility.printNewLine(oneMcp, "Generating execution plan...");
+          if (previousExecutionError != null) {
+            StdoutUtility.printNewLine(oneMcp, 
+                "Retrying plan generation (attempt {}/{}) with execution error feedback...".formatted(
+                    planGenerationAttempts + 1, maxPlanGenerationAttempts));
+          }
+          long planStart = System.currentTimeMillis();
+          
+          // STEP 3: CREATE PLAN (this will trigger LLM call)
+          try {
+            // Determine cache directory using same logic as ExecutionPlanCache
+            Path cacheDir = determineCacheDirectory(handbookPath);
+            Path endpointInfoDir = cacheDir.resolve("endpoint_info");
+            DagPlanner dagPlanner = new DagPlanner(oneMcp, endpointInfoDir);
+            String dagPlanJson = dagPlanner.planDag(schema, prompt.trim(), previousExecutionError);
+            
+            // Convert DAG JSON to ExecutionPlan
+            plan = ExecutionPlan.fromJson(dagPlanJson);
+            planGenerationAttempts++;
+                
+            long planDuration = System.currentTimeMillis() - planStart;
+            StdoutUtility.printSuccessLine(oneMcp,
+                "Plan generation completed in (%d ms).".formatted(planDuration));
+            log.info("Generated plan for PSK: {} in {}ms (attempt {})", 
+                schema.getCacheKey(), planDuration, planGenerationAttempts);
+            
+            // Plan generation is logged in execution plan event
+            oneMcp.inferenceLogger().logPhaseEnd("plan-dag", planAttempt);
+          } catch (Exception e) {
+            // Capture plan generation errors
+            planGenerationAttempts++;
+            String planError = getFullErrorMessage(e);
+            log.error("Plan generation failed for PSK: {} (attempt {})", 
+                schema.getCacheKey(), planGenerationAttempts, e);
+            
+            // Automatically log exception with current phase and attempt
+            oneMcp.inferenceLogger().logException(e);
+            
+            // If we haven't exceeded retry limit, retry with error feedback
+            if (planGenerationAttempts < maxPlanGenerationAttempts) {
+              oneMcp.inferenceLogger().logPhaseEnd("plan-dag", planAttempt);
+              previousExecutionError = planError;
+              plan = null; // Reset to trigger regeneration
+              log.info("Retrying plan generation with error feedback: {}", planError);
+              continue; // Retry plan generation
+            } else {
+              // Exceeded retry limit - throw with proper error message
+              oneMcp.inferenceLogger().logPhaseEnd("plan-dag", planAttempt);
+              throw new ExecutionException("Plan generation failed after " + planGenerationAttempts + 
+                  " attempts: " + planError, e);
+            }
+          }
         }
         
-        String planJson = JacksonUtility.getJsonMapper().writeValueAsString(planData);
-        // Use logExecutionPlanNew to ensure it's a separate event (will be updated with result/error later)
-        oneMcp.inferenceLogger().logExecutionPlanNew(planJson, null, null, cacheHit);
-        log.debug("Logged DAG plan with PS info (cache hit: {}, length: {})", 
-            cacheHit, dagJson.length());
-      } catch (Exception e) {
-        log.error("Failed to log execution plan", e);
-        // Try to log an error message as the plan
+        // ─────────────────────────────────────────────────────────────────────
+        // STEP 4: EXECUTE PLAN (with values from PromptSchema)
+        // ─────────────────────────────────────────────────────────────────────
+        executionAttempted = true;
+        oneMcp.inferenceLogger().logPhaseBegin("execute", planGenerationAttempts);
+        StdoutUtility.printNewLine(oneMcp, "Executing plan...");
+        
+        // Log the execution plan to the report with cache hit status
+        // Note: cacheHit reflects whether we got the plan from cache (even if we're regenerating due to failure)
+        // Ensure plan is logged even if serialization fails
+        // Also log the Prompt Schema for debugging
+        String schemaJson = null;
         try {
-          oneMcp.inferenceLogger().logExecutionPlanNew(
-              "{\"error\": \"Failed to serialize plan: " + e.getMessage() + "\"}", null, null, null);
-        } catch (Exception e2) {
-          log.error("Failed to log error plan", e2);
+          schemaJson = JacksonUtility.getJsonMapper().writeValueAsString(schema);
+        } catch (Exception e) {
+          log.debug("Failed to serialize schema for logging (PSK: {}): {}", schema.getCacheKey(), e.getMessage());
         }
-        // Continue execution even if logging fails
-      }
-
-      // 6. Execute DAG plan
-      String outputStr = null;
-      progress.beginStage("exec", "Executing DAG plan", 1);
-      StdoutUtility.printNewLine(oneMcp, "Executing DAG plan.");
-      
-      // Build operation registry for DAG
-      OperationRegistry operationRegistry = new OperationRegistry();
-      
-      // Register API operations
-      for (Api api : oneMcp.handbook().apis().values()) {
-        api.getService()
-            .getInvokers()
-            .forEach(
-                (key, value) -> {
-                  operationRegistry.register(
-                      key,
-                      (data) -> {
-                        try {
-                          calledOperations.add("%s.%s".formatted(api.getSlug(), key));
-                          StdoutUtility.printRollingLine(
-                              oneMcp, "Invoking operation %s".formatted(key));
-                          
-                          value.setInferenceLogger(oneMcp.inferenceLogger());
-                          JsonNode result =
-                              value.invoke(data.has("data") ? data.get("data") : data);
-                          return result;
-                        } catch (Exception e) {
-                          log.error("Error invoking service {} with data {}", key, JacksonUtility.toJson(data), e);
-                          throw new ExecutionPlanException(
-                              "Error invoking service %s".formatted(key), e);
-                        }
-                      });
-                });
-      }
-      
-      if (dagPlan == null) {
-        dagPlan = DagPlan.fromJsonString(dagJson);
-      }
-      
-      // Convert PS.values to Map<String, String> for initial values
-      Map<String, String> psValues = new HashMap<>();
-      if (ps.getValues() != null) {
-        for (Map.Entry<String, Object> entry : ps.getValues().entrySet()) {
-          psValues.put(entry.getKey(), String.valueOf(entry.getValue()));
+        
+        if (plan != null) {
+          try {
+            String planJson = plan.toPrettyJson();
+            oneMcp.inferenceLogger().logExecutionPlan(planJson, cacheHit && !shouldRegenerate, schemaJson);
+          } catch (Exception e) {
+            log.error("Failed to serialize plan for logging (PSK: {}): {}", schema.getCacheKey(), e.getMessage(), e);
+            // Log with error message so we know the plan exists but couldn't be serialized
+            oneMcp.inferenceLogger().logExecutionPlan(
+                "{\"error\": \"Failed to serialize plan: " + e.getMessage() + "\"}", 
+                cacheHit && !shouldRegenerate, schemaJson);
+          }
+        } else {
+          log.error("Cannot log execution plan: plan is null (PSK: {})", schema.getCacheKey());
+          // Log empty plan so we know execution was attempted but plan was null
+          oneMcp.inferenceLogger().logExecutionPlan("", cacheHit && !shouldRegenerate, schemaJson);
+        }
+        
+        long executeStart = System.currentTimeMillis();
+        
+        boolean executionSucceeded = false;
+        String executionError = null;
+        
+        try {
+          OperationRegistry registry = buildOperationRegistry(ctx);
+          ExecutionPlanEngine engine = new ExecutionPlanEngine(JacksonUtility.getJsonMapper(), registry);
+          
+          // Build initial state from PromptSchema params
+          ObjectNode initialState = JacksonUtility.getJsonMapper().createObjectNode();
+          if (schema.getParams() != null) {
+            for (Map.Entry<String, Object> entry : schema.getParams().entrySet()) {
+              initialState.set(entry.getKey(), JacksonUtility.getJsonMapper().valueToTree(entry.getValue()));
+            }
+          }
+          
+          JsonNode planJson = JacksonUtility.getJsonMapper().readTree(plan.toJson());
+          JsonNode executionResult = engine.execute(planJson, initialState);
+          result = executionResult != null ? executionResult.toString() : "{}";
+          executionSucceeded = true;
+          oneMcp.inferenceLogger().logPhaseEnd("execute");
+          log.info("Execution succeeded for PSK: {}, result length: {}", 
+              schema.getCacheKey(), result != null ? result.length() : 0);
+        } catch (Exception e) {
+          // Preserve full error message including cause
+          executionError = getFullErrorMessage(e);
+          
+          // Log the exception (automatically includes phase, attempt, and stack trace)
+          log.error("Plan execution failed for PSK: {} (attempt {}): {}", 
+              schema.getCacheKey(), planGenerationAttempts, executionError, e);
+          oneMcp.inferenceLogger().logException(e);
+          
+          oneMcp.inferenceLogger().logPhaseEnd("execute");
+          
+          // Store the failed plan BEFORE resetting it (if we're not retrying)
+          // This ensures we cache failed plans for retry tracking
+          if (!isNewlyGenerated || planGenerationAttempts >= maxPlanGenerationAttempts) {
+            // Not retrying - store the failed plan
+            if (plan != null) {
+              try {
+                cache.storeByCacheKey(schema.getCacheKey(), plan, false, executionError);
+                log.debug("Stored failed plan in cache for PSK: {} (attempt {})", 
+                    schema.getCacheKey(), planGenerationAttempts);
+              } catch (Exception cacheEx) {
+                log.error("Failed to store failed plan in cache for PSK: {}", schema.getCacheKey(), cacheEx);
+              }
+            }
+          }
+          
+          // Always set previousExecutionError so it's available for error reporting
+          previousExecutionError = executionError;
+          
+          // If this is a newly generated plan and we haven't exceeded retry limit, retry
+          if (isNewlyGenerated && planGenerationAttempts < maxPlanGenerationAttempts) {
+            plan = null; // Reset plan to trigger regeneration
+            log.info("Retrying plan generation with execution error feedback: {}", executionError);
+            continue; // Retry plan generation
+          }
+          
+          // If this is a cached plan that failed, we should also retry by regenerating
+          if (!isNewlyGenerated && planGenerationAttempts < maxPlanGenerationAttempts) {
+            plan = null; // Reset plan to trigger regeneration
+            log.info("Cached plan failed, regenerating with execution error feedback: {}", executionError);
+            continue; // Retry plan generation
+          }
+        } finally {
+          long executeDuration = System.currentTimeMillis() - executeStart;
+          
+          // ─────────────────────────────────────────────────────────────────────
+          // STEP 5: STORE PLAN (always store, with execution status)
+          // ─────────────────────────────────────────────────────────────────────
+          // Only store if execution succeeded (failed plans are stored in catch block)
+          if (executionSucceeded) {
+            if (plan == null) {
+              log.warn("Cannot store plan: plan is null (PSK: {})", schema.getCacheKey());
+            } else {
+              try {
+                log.info("Storing plan in cache for PSK: {} (execution succeeded)", schema.getCacheKey());
+                cache.storeByCacheKey(schema.getCacheKey(), plan, true, null);
+                log.info("Cache storage completed for PSK: {} (succeeded: true)", 
+                    schema.getCacheKey());
+      } catch (Exception e) {
+                log.error("Failed to store plan in cache for PSK: {}", schema.getCacheKey(), e);
+              }
+            }
+          } else {
+            log.debug("Skipping cache storage - execution did not succeed (PSK: {}, attempts: {})", 
+                schema.getCacheKey(), planGenerationAttempts);
+          }
+          
+          if (executionSucceeded) {
+            StdoutUtility.printSuccessLine(oneMcp,
+                "Execution completed in (%d ms).".formatted(executeDuration));
+            StdoutUtility.printSuccessLine(oneMcp, 
+                "✓ Plan cached for future use: %s".formatted(schema.getCacheKey()));
+            log.info("Cached plan for PSK: {} after successful execution", schema.getCacheKey());
+          } else if (planGenerationAttempts >= maxPlanGenerationAttempts) {
+            StdoutUtility.printError(oneMcp, 
+                "Execution failed in (%d ms)".formatted(executeDuration), null);
+            log.info("Cached failed plan for PSK: {} (will retry on next attempt)", schema.getCacheKey());
+          }
+          
+          // Plan execution is logged in execution plan event
+        }
+        
+        // If execution succeeded, break out of retry loop
+        if (executionSucceeded) {
+          break;
+        }
+        
+        // If we've exhausted retries, break and throw error
+        if (planGenerationAttempts >= maxPlanGenerationAttempts) {
+          break;
         }
       }
       
-      // Convert conceptual values to API format before execution
-      // This analyzes ConvertValue nodes in the DAG and converts PS values upfront
-      com.gentoro.onemcp.cache.dag.ValueConversionService conversionService = 
-          new com.gentoro.onemcp.cache.dag.ValueConversionService();
-      Map<String, String> initialValues = conversionService.convertValues(dagPlan, psValues);
-      
-      // Execute using DagExecutor
-      DagExecutor dagExecutor = new DagExecutor(operationRegistry);
-      
-      JsonNode result = dagExecutor.execute(dagPlan, initialValues);
-      outputStr = JacksonUtility.getJsonMapper().writeValueAsString(result);
-      
-      if (outputStr == null || outputStr.trim().isEmpty()) {
-        throw new ExecutionException("DAG execution returned null or empty result");
+      // Re-throw exception if execution failed after all retries
+      if (result == null) {
+        String finalError = previousExecutionError != null ? previousExecutionError : "Unknown error";
+        
+        log.error("Final error after all retries (PSK: {}, attempts: {}): {}", 
+            schema.getCacheKey(), planGenerationAttempts, finalError);
+        
+        // Preserve the original error message without extra wrapping if it's already descriptive
+        if (finalError.startsWith("Operation") && finalError.contains("failed")) {
+          throw new ExecutionException(finalError);
+        } else {
+          throw new ExecutionException("Plan execution failed after " + planGenerationAttempts + " attempts: " + finalError);
+        }
       }
+      
+      // Final summary
+      long totalDuration = System.currentTimeMillis() - start;
+      String hitOrMiss = cacheHit ? "CACHE HIT" : "CACHE MISS";
+      StdoutUtility.printSuccessLine(oneMcp,
+          "Assignment handled in (%d ms) [%s]\nAnswer:\n%s"
+              .formatted(totalDuration, hitOrMiss, StringUtility.formatWithIndent(result, 4)));
       
       success = true;
       
-      // Cache success
-      DagPlanCache dagPlanCacheForSuccess = new DagPlanCache(cacheDir);
-      dagPlanCacheForSuccess.storeByCacheKey(cacheKey, dagPlan, true, null);
-      
-      progress.endStageOk("exec", Map.of("result", "success"));
-      
-      // Log execution result
-      try {
-        Map<String, Object> planData = new HashMap<>();
-        planData.put("dag", dagJson);
-        planData.put("operation", ps.getOperation());
-        planData.put("table", ps.getTable());
-        planData.put("values", ps.getValues() != null ? ps.getValues() : new HashMap<>());
-        planData.put("cache_key", cacheKey);
-        String planJson = JacksonUtility.getJsonMapper().writeValueAsString(planData);
-        oneMcp.inferenceLogger().logExecutionPlanNew(planJson, outputStr, null, cacheHit);
-      } catch (Exception logErr) {
-        log.warn("Failed to log plan execution result", logErr);
-      }
-      
-      // Continue to shared response handling below
-      // (outputStr and success are set)
-      
-      if (outputStr == null) {
-        throw new ExecutionException("Plan execution failed");
-      }
-
-      log.trace("Generated answer:\n{}", StringUtility.formatWithIndent(outputStr, 4));
-      StdoutUtility.printSuccessLine(
-          oneMcp,
-          "Assignment handled in (%s ms)\nAnswer: \n%s"
-              .formatted(
-                  (System.currentTimeMillis() - start),
-                  StringUtility.formatWithIndent(outputStr, 4)));
-
-      // Attach note to result if present (caveat)
-      String finalOutput = outputStr;
-      if (normalizationNote != null && !normalizationNote.trim().isEmpty()) {
-        // Append note as a caveat to the result
-        finalOutput = outputStr + "\n\nNote: " + normalizationNote;
-        log.info("Attached normalization note (caveat) to result");
-      }
-
-      assignmentParts.add(
-          new AssigmentResult.Assignment(
-              true, prompt, false, finalOutput));
-      
-      // Log final response (with note if present)
-      oneMcp.inferenceLogger().logFinalResponse(finalOutput);
-      
     } catch (Exception e) {
-      StdoutUtility.printError(oneMcp, "Could not handle assignment properly", e);
-      // Use clean error message for user-facing display
-      String errorMsg = ExceptionUtil.extractErrorMessage(e);
-      assignmentParts.add(
-          new AssigmentResult.Assignment(
-              true, prompt, true, errorMsg));
-      success = false;
-      // Don't throw here - ensure report is generated first
+      log.error("Failed to handle prompt: {}", e.getMessage(), e);
+      // Include full error details including cause
+      String fullError = getFullErrorMessage(e);
+      // Don't add "Error: " prefix if the message already starts with it or is descriptive
+      if (fullError.startsWith("Error:") || fullError.startsWith("Plan execution failed:") || 
+          fullError.startsWith("Operation") || fullError.startsWith("Filter with")) {
+        result = fullError;
+      } else {
+        result = "Error: " + fullError;
+      }
+      StdoutUtility.printError(oneMcp, "Failed to handle prompt", e);
     }
 
-    // Build the result
-    long totalTimeMs = System.currentTimeMillis() - start;
-    AssigmentResult.Statistics stats =
-        new AssigmentResult.Statistics(
-            0, // promptTokens - TODO: track from plan context
-            0, // completionTokens - TODO: track from plan context
-            0, // totalTokens - TODO: track from plan context
-            totalTimeMs,
-            calledOperations,
-            null); // trace - TODO: track from plan context
+    // Log final response
+    if (result != null) {
+      oneMcp.inferenceLogger().logFinalResponse(result);
+    }
     
-    AssigmentResult result = new AssigmentResult(assignmentParts, stats, null);
+    // Complete execution tracking
+    long durationMs = System.currentTimeMillis() - start;
+    String finalReportPath = oneMcp.inferenceLogger().completeExecution(executionId, durationMs, success, start);
     
-    // Log the assignment result for the report
-    oneMcp.inferenceLogger().logAssigmentResult(result);
-    
-    // Complete execution tracking - ALWAYS generate report, even on errors
-    oneMcp.inferenceLogger().completeExecution(executionId, totalTimeMs, success);
-    
-    // If there was an error, throw it after generating the report
-    if (!success && !assignmentParts.isEmpty() && assignmentParts.get(assignmentParts.size() - 1).isError()) {
-      String errorMsg = assignmentParts.get(assignmentParts.size() - 1).content();
-      throw new ExecutionException(errorMsg);
+    // Return JSON with content and reportPath if report is available
+    if (finalReportPath != null && !finalReportPath.isEmpty()) {
+      try {
+        com.fasterxml.jackson.databind.ObjectMapper mapper = JacksonUtility.getJsonMapper();
+        java.util.Map<String, String> response = new java.util.HashMap<>();
+        response.put("content", result != null ? result : "");
+        response.put("reportPath", finalReportPath);
+        return mapper.writeValueAsString(response);
+      } catch (Exception e) {
+        log.warn("Failed to serialize response with report path", e);
+      }
     }
     
     return result;
   }
 
   /**
-   * Get cache directory path.
+   * Determine cache directory using same priority as ExecutionPlanCache:
+   * 1. ONEMCP_CACHE_DIR environment variable
+   * 2. ONEMCP_HOME_DIR/cache
+   * 3. User home/.onemcp/cache
+   * 4. Fallback to handbook/cache
    */
-  private Path getCacheDirectory(Path handbookPath) {
+  private Path determineCacheDirectory(Path handbookPath) {
+    // Priority 1: ONEMCP_CACHE_DIR environment variable
     String cacheDirEnv = System.getenv("ONEMCP_CACHE_DIR");
     if (cacheDirEnv != null && !cacheDirEnv.isBlank()) {
-      return Paths.get(cacheDirEnv);
+      Path cacheDir = Path.of(cacheDirEnv);
+      log.debug("Using cache directory from ONEMCP_CACHE_DIR: {}", cacheDir);
+      return cacheDir;
     }
+
+    // Priority 2: ONEMCP_HOME_DIR/cache
     String homeDir = System.getenv("ONEMCP_HOME_DIR");
     if (homeDir != null && !homeDir.isBlank()) {
-      return Paths.get(homeDir, "cache");
+      Path cacheDir = Path.of(homeDir, "cache");
+      log.debug("Using cache directory from ONEMCP_HOME_DIR: {}", cacheDir);
+      return cacheDir;
     }
+
+    // Priority 3: User home/.onemcp/cache (fallback)
     String userHome = System.getProperty("user.home");
     if (userHome != null && !userHome.isBlank()) {
-      return Paths.get(userHome, ".onemcp", "cache");
+      Path cacheDir = Path.of(userHome, ".onemcp", "cache");
+      log.debug("Using cache directory from user home: {}", cacheDir);
+      return cacheDir;
     }
-    // Final fallback: handbook/cache
-    return handbookPath.resolve("cache");
+
+    // Final fallback: handbook/cache (should not happen in normal operation)
+    if (handbookPath != null) {
+      log.warn("Could not determine cache directory, falling back to handbook/cache");
+      return handbookPath.resolve("cache");
+    }
+    
+    // Ultimate fallback: temp directory
+    Path cacheDir = Path.of(System.getProperty("java.io.tmpdir"), "onemcp", "cache");
+    log.warn("Could not determine cache directory, using fallback: {}", cacheDir);
+    return cacheDir;
   }
 
   /**
-   * Index the conceptual lexicon by extracting it from the API specification.
-   * This uses the Lexifier which produces a flat vocabulary of actions, entities, and fields.
-   * 
-   * @return the report path if available, or null
-   * @throws HandbookException if lexicon extraction fails
+   * Get the handbook path from environment or knowledge base.
    */
-  public String indexSchema() throws HandbookException {
-    Path handbookPath = oneMcp.handbook().location();
-    if (handbookPath == null) {
-      throw new HandbookException("Handbook location is not available");
-    }
-
-    Path cacheDir = getCacheDirectory(handbookPath);
-    
-    // Force regeneration by deleting the lexicon file if it exists
-    Path lexiconPath = cacheDir.resolve("lexicon.json");
-    try {
-      if (Files.exists(lexiconPath)) {
-        Files.delete(lexiconPath);
-        log.info("Deleted existing lexicon file to force regeneration: {}", lexiconPath);
+  private Path getHandbookPath(OrchestratorContext ctx) {
+    // First try HANDBOOK_DIR environment variable (set by CLI)
+    String envHandbookDir = System.getenv("HANDBOOK_DIR");
+    if (envHandbookDir != null && !envHandbookDir.isBlank()) {
+      Path envHandbookPath = Path.of(envHandbookDir);
+      if (Files.exists(envHandbookPath) && Files.isDirectory(envHandbookPath)) {
+        log.debug("Using HANDBOOK_DIR for cache flow: {}", envHandbookPath);
+        return envHandbookPath;
       }
-    } catch (IOException e) {
-      log.warn("Failed to delete existing lexicon file: {}", e.getMessage());
     }
     
-    // Generate lexicon using Lexifier
+    // Fallback to Handbook path
+    Handbook handbook = ctx.handbook();
+    if (handbook != null && handbook.location() != null) {
+      log.debug("Using Handbook path for cache flow: {}", handbook.location());
+      return handbook.location();
+    }
+    
+    log.debug("No handbook path available for cache flow");
+    return null;
+  }
+
+  /**
+   * Build an OperationRegistry from Handbook services.
+   * Each service's operations are registered as invokable functions.
+   */
+  private OperationRegistry buildOperationRegistry(OrchestratorContext ctx) {
+    OperationRegistry registry = new OperationRegistry();
+    Handbook handbook = ctx.handbook();
+    
+    if (handbook == null) {
+      log.warn("No handbook available for operation registry");
+      return registry;
+    }
+    
+    Path handbookPath = handbook.location();
+    if (handbookPath == null) {
+      log.warn("Handbook location is not available");
+      return registry;
+    }
+    
+    // Get base URL from configuration (default to localhost:8080) - will be overridden by OpenAPI spec if available
+    String baseUrl = oneMcp.configuration().getString("server.baseUrl", "http://localhost:8080");
+    AtomicInteger operationCount = new AtomicInteger(0);
+    
     try {
-      // Ensure cache directory exists
-      Files.createDirectories(cacheDir);
+      // Load OpenAPI spec from handbook
+      Path apisDir = handbookPath.resolve("apis");
+      Path openapiDir = handbookPath.resolve("openapi");
+      Path sourceDir = null;
       
-      // Generate lexicon using Lexifier
+      if (Files.exists(apisDir)) {
+        sourceDir = apisDir;
+      } else if (Files.exists(openapiDir)) {
+        sourceDir = openapiDir;
+      } else {
+        log.warn("No APIs directory found in handbook: {}", handbookPath);
+        return registry;
+      }
+      
+      // Find first OpenAPI spec file
+      Path specFile = null;
+      try (var stream = Files.list(sourceDir)) {
+        specFile = stream
+            .filter(p -> p.toString().endsWith(".yaml") || p.toString().endsWith(".yml") || p.toString().endsWith(".json"))
+            .findFirst()
+            .orElse(null);
+      }
+      
+      if (specFile == null) {
+        log.warn("No OpenAPI spec file found in: {}", sourceDir);
+        return registry;
+      }
+      
+      // Load OpenAPI spec
+      io.swagger.v3.oas.models.OpenAPI openAPI = com.gentoro.onemcp.openapi.OpenApiLoader.load(specFile.toString());
+      
+      // Prefer baseUrl from OpenAPI spec servers (contains correct path prefix like /acme)
+      // Fall back to configuration baseUrl if no server URL in spec
+      if (openAPI.getServers() != null && !openAPI.getServers().isEmpty()) {
+        io.swagger.v3.oas.models.servers.Server server = openAPI.getServers().get(0);
+        if (server != null && server.getUrl() != null && !server.getUrl().isEmpty()) {
+          baseUrl = server.getUrl();
+          log.debug("Using baseUrl from OpenAPI spec: {}", baseUrl);
+        }
+      }
+      
+      // Build OpenAPI proxy to handle operation invocations
+      // Pass inference logger so API calls can be logged
+      OpenApiProxy proxy = new OpenApiProxyImpl(openAPI, baseUrl, oneMcp.inferenceLogger());
+      
+      // Register each operation from the OpenAPI spec
+      if (openAPI.getPaths() != null) {
+        openAPI.getPaths().forEach((path, pathItem) -> {
+          pathItem.readOperationsMap().forEach((httpMethod, operation) -> {
+            String operationId = operation.getOperationId();
+            if (operationId != null && !operationId.isEmpty()) {
+              registry.register(operationId, (input) -> {
+                try {
+                  return proxy.invoke(operationId, input);
+                } catch (Exception e) {
+                  log.error("Failed to invoke operation: {}", operationId, e);
+                  throw new ExecutionPlanException("Operation '" + operationId + "' failed: " + e.getMessage(), e);
+                }
+              });
+              operationCount.incrementAndGet();
+              log.debug("Registered operation: {}", operationId);
+            }
+          });
+        });
+      }
+    } catch (Exception e) {
+      log.warn("Failed to build operation registry", e);
+    }
+    
+    log.info("Built operation registry with {} operations", operationCount.get());
+    return registry;
+  }
+
+  /**
+   * Extract full error message including cause chain.
+   * This helps preserve underlying error details that might be lost in exception wrapping.
+   * Recursively walks the cause chain to extract all error messages.
+   */
+  private String getFullErrorMessage(Exception e) {
+    if (e == null) {
+      return "Unknown error";
+    }
+    
+    StringBuilder sb = new StringBuilder();
+    Throwable current = e;
+    int depth = 0;
+    int maxDepth = 10; // Prevent infinite loops
+    
+    while (current != null && depth < maxDepth) {
+      String message = current.getMessage();
+      if (message == null || message.isEmpty()) {
+        message = current.getClass().getSimpleName();
+      }
+      
+      if (depth == 0) {
+        // First level: exception type and message
+        sb.append(current.getClass().getSimpleName());
+        if (!message.equals(current.getClass().getSimpleName())) {
+          sb.append(": ").append(message);
+        }
+      } else {
+        // Nested causes
+        sb.append(" -> ").append(current.getClass().getSimpleName());
+        if (!message.equals(current.getClass().getSimpleName())) {
+          sb.append(": ").append(message);
+        }
+      }
+      
+      current = current.getCause();
+      depth++;
+      
+      // Stop if we've reached the root cause or if the cause is the same as the current exception
+      if (current != null && current == e) {
+        break;
+      }
+    }
+    
+    String result = sb.toString();
+    if (result.isEmpty()) {
+      return e.getClass().getSimpleName();
+    }
+    
+    return result;
+  }
+
+
+  /**
+   * Index schema from handbook (used by MCP server).
+   * Clears existing lexicon and execution plans, then executes the lexifier to regenerate the conceptual lexicon.
+   * @return JSON string with status messages, report path, and final result
+   */
+  public String indexSchema() {
+    try {
+      log.info("Starting index operation: clearing cache and regenerating lexicon...");
+      
+      // Start execution tracking
+      String executionId = java.util.UUID.randomUUID().toString();
+      String reportPath = oneMcp.inferenceLogger().startExecution(executionId, "index schema (lexifier)");
+      long startTime = System.currentTimeMillis();
+      
+      java.util.List<String> statusMessages = new java.util.ArrayList<>();
+      
+      // Step 1: Clear existing lexicon and execution plans
+      statusMessages.add("Clearing existing lexicon and execution plans...");
+      Path handbookPath = getHandbookPath(new OrchestratorContext(oneMcp, new ValueStore()));
+      if (handbookPath == null) {
+        throw new ExecutionException("No handbook path available. Set HANDBOOK_DIR or configure a handbook.");
+      }
+      
+      // Clear execution plan cache
+      ExecutionPlanCache planCache = new ExecutionPlanCache(handbookPath);
+      int plansCleared = planCache.clear();
+      log.info("Cleared {} execution plan(s)", plansCleared);
+      statusMessages.add(String.format("✓ Cleared %d execution plan(s)", plansCleared));
+      
+      // Clear lexicon file
       Lexifier lexifier = new Lexifier(oneMcp);
+      java.nio.file.Path cacheDir = lexifier.getCacheDirectory();
+      java.nio.file.Path lexiconPath = cacheDir.resolve("lexicon.json");
+      boolean lexiconDeleted = false;
+      if (java.nio.file.Files.exists(lexiconPath)) {
+        try {
+          java.nio.file.Files.delete(lexiconPath);
+          lexiconDeleted = true;
+          log.info("Deleted existing lexicon: {}", lexiconPath);
+          statusMessages.add("✓ Deleted existing lexicon");
+        } catch (java.io.IOException e) {
+          log.warn("Failed to delete lexicon file: {}", lexiconPath, e);
+          statusMessages.add("⚠ Failed to delete lexicon file (continuing anyway)");
+        }
+      } else {
+        statusMessages.add("ℹ No existing lexicon found");
+      }
+      
+      // Step 2: Execute lexifier to regenerate the conceptual lexicon
+      statusMessages.add("Executing lexifier to regenerate lexicon...");
+      log.info("Executing lexifier to regenerate lexicon...");
+      
       ConceptualLexicon lexicon = lexifier.extractLexicon();
       
-      log.info("Successfully indexed conceptual lexicon: {} actions, {} entities, {} fields", 
-          lexicon.getActions().size(), lexicon.getEntities().size(), lexicon.getFields().size());
+      long duration = System.currentTimeMillis() - startTime;
+      int actionCount = lexicon.getActions() != null ? lexicon.getActions().size() : 0;
+      int entityCount = lexicon.getEntities() != null ? lexicon.getEntities().size() : 0;
+      int fieldCount = lexicon.getFields() != null ? lexicon.getFields().size() : 0;
       
-      // Get the lexifier report path
-      return oneMcp.inferenceLogger().getCurrentReportPath();
+      log.info("Lexicon regenerated successfully in {}ms: {} actions, {} entities, {} fields", 
+          duration, actionCount, entityCount, fieldCount);
+      
+      String successMessage = String.format("✓ Lexicon regenerated: %d actions, %d entities, %d fields (took %dms)", 
+          actionCount, entityCount, fieldCount, duration);
+      statusMessages.add(successMessage);
+      
+      // Complete lexifier report first (this will set currentReportPath to lexifier report)
+      String lexifierReportPath = null;
+      if (oneMcp.inferenceLogger() != null) {
+        oneMcp.inferenceLogger().endLexifierReport(true, null);
+        // Get the lexifier report path (it was set by endLexifierReport)
+        lexifierReportPath = oneMcp.inferenceLogger().getCurrentReportPath();
+      }
+      
+      // Complete execution report (this will overwrite currentReportPath with execution report)
+      oneMcp.inferenceLogger().completeExecution(executionId, duration, true, startTime);
+      
+      // Use lexifier report path if available (it has all the detailed information)
+      // Otherwise fall back to execution report path
+      String finalReportPath = lexifierReportPath != null ? lexifierReportPath : reportPath;
+      
+      // Build response JSON with status messages
+      java.util.Map<String, Object> response = new java.util.HashMap<>();
+      response.put("status", "success");
+      response.put("messages", statusMessages);
+      response.put("content", successMessage);
+      response.put("reportPath", finalReportPath);
+      response.put("stats", java.util.Map.of(
+          "actions", actionCount,
+          "entities", entityCount,
+          "fields", fieldCount,
+          "durationMs", duration
+      ));
+      
+      return JacksonUtility.toJson(response);
     } catch (Exception e) {
-      log.error("Failed to index conceptual lexicon: {}", e.getMessage(), e);
-      throw new HandbookException(
-          "Failed to index conceptual lexicon: " + e.getMessage() + 
-          (e.getCause() != null ? " (Caused by: " + e.getCause().getMessage() + ")" : ""), e);
+      log.error("Failed to execute lexifier", e);
+      // Complete lexifier report with error
+      if (oneMcp.inferenceLogger() != null) {
+        oneMcp.inferenceLogger().endLexifierReport(false, e.getMessage());
+      }
+      
+      // Build error response JSON
+      java.util.Map<String, Object> errorResponse = new java.util.HashMap<>();
+      errorResponse.put("status", "error");
+      errorResponse.put("content", "Failed to execute lexifier: " + e.getMessage());
+      errorResponse.put("message", "Failed to execute lexifier: " + e.getMessage());
+      
+      String reportPath = oneMcp.inferenceLogger().getCurrentReportPath();
+      if (reportPath != null) {
+        errorResponse.put("reportPath", reportPath);
+      }
+      
+      throw new ExecutionException(JacksonUtility.toJson(errorResponse), e);
     }
   }
-
-  /**
-   * Register format conversion operations for DAG execution.
-   * Includes a generic script execution operation for arbitrary conversions.
-   */
-  private void registerFormatConversionOperations(OperationRegistry registry, Path cacheDir) {
-    // Generic script execution operation - allows LLM to generate arbitrary conversion code
-    registry.register("executeScript", (input) -> {
-      try {
-        String code = input.has("code") ? input.get("code").asText() : null;
-        JsonNode inputData = input.has("input") ? input.get("input") : JacksonUtility.getJsonMapper().createObjectNode();
-        
-        if (code == null || code.trim().isEmpty()) {
-          throw new ExecutionPlanException("executeScript: missing 'code' parameter");
-        }
-        
-        // Execute JavaScript code using Node.js
-        // Input is passed as JSON, code should return the converted value
-        Path tempDir = cacheDir.resolve("ts-temp");
-        Files.createDirectories(tempDir);
-        
-        String uuid = UUID.randomUUID().toString();
-        Path jsFile = tempDir.resolve("script_" + uuid + ".js");
-        Path resultFile = tempDir.resolve("script_result_" + uuid + ".json");
-        
-        // Create JavaScript file that executes the conversion code
-        String inputJson = JacksonUtility.getJsonMapper().writeValueAsString(inputData);
-        String jsCode = String.format("""
-            const input = %s;
-            const fs = require('fs');
-            let result;
-            try {
-              %s
-              fs.writeFileSync('%s', JSON.stringify({ result: result }));
-            } catch (error) {
-              fs.writeFileSync('%s', JSON.stringify({ error: error.message }));
-              process.exit(1);
-            }
-            """, inputJson, code, resultFile.toString(), resultFile.toString());
-        
-        Files.writeString(jsFile, jsCode);
-        
-        // Execute using Node.js
-        ProcessBuilder pb = new ProcessBuilder("node", jsFile.toString());
-        pb.directory(tempDir.toFile());
-        Process process = pb.start();
-        
-        boolean finished = process.waitFor(5, TimeUnit.SECONDS);
-        if (!finished) {
-          process.destroyForcibly();
-          throw new ExecutionPlanException("Script execution timed out");
-        }
-        
-        if (process.exitValue() != 0) {
-          // Try to read error from result file
-          if (Files.exists(resultFile)) {
-            String errorContent = Files.readString(resultFile);
-            JsonNode errorJson = JacksonUtility.getJsonMapper().readTree(errorContent);
-            if (errorJson.has("error")) {
-              throw new ExecutionPlanException("Script execution failed: " + errorJson.get("error").asText());
-            }
-          }
-          throw new ExecutionPlanException("Script execution failed with exit code " + process.exitValue());
-        }
-        
-        // Read result
-        if (!Files.exists(resultFile)) {
-          throw new ExecutionPlanException("Script did not produce result file");
-        }
-        
-        String resultContent = Files.readString(resultFile);
-        JsonNode resultJson = JacksonUtility.getJsonMapper().readTree(resultContent);
-        
-        if (resultJson.has("error")) {
-          throw new ExecutionPlanException("Script execution error: " + resultJson.get("error").asText());
-        }
-        
-        // Cleanup
-        try {
-          Files.deleteIfExists(jsFile);
-          Files.deleteIfExists(resultFile);
-        } catch (Exception e) {
-          log.debug("Failed to cleanup script files", e);
-        }
-        
-        return resultJson;
-      } catch (Exception e) {
-        throw new ExecutionPlanException("executeScript failed: " + e.getMessage(), e);
-      }
-    });
-    
-    // Keep the pre-defined conversions for common cases (optional optimization)
-    // Convert ISO 8601 datetime to 12-hour time format (e.g., "2:30 PM")
-    registry.register("convertISO8601To12Hour", (input) -> {
-      try {
-        String iso = input.has("iso") ? input.get("iso").asText() : null;
-        if (iso == null || iso.isEmpty()) {
-          throw new ExecutionPlanException("convertISO8601To12Hour: missing 'iso' parameter");
-        }
-        java.time.Instant instant = java.time.Instant.parse(iso);
-        java.time.LocalTime time = instant.atZone(java.time.ZoneId.systemDefault()).toLocalTime();
-        java.time.format.DateTimeFormatter formatter = 
-            java.time.format.DateTimeFormatter.ofPattern("h:mm a");
-        String result = time.format(formatter);
-        return JacksonUtility.getJsonMapper().createObjectNode().put("result", result);
-      } catch (Exception e) {
-        throw new ExecutionPlanException("convertISO8601To12Hour failed: " + e.getMessage(), e);
-      }
-    });
-
-    // Convert ISO 8601 datetime to 24-hour time format (e.g., "14:30")
-    registry.register("convertISO8601To24Hour", (input) -> {
-      try {
-        String iso = input.has("iso") ? input.get("iso").asText() : null;
-        if (iso == null || iso.isEmpty()) {
-          throw new ExecutionPlanException("convertISO8601To24Hour: missing 'iso' parameter");
-        }
-        java.time.Instant instant = java.time.Instant.parse(iso);
-        java.time.LocalTime time = instant.atZone(java.time.ZoneId.systemDefault()).toLocalTime();
-        String result = time.format(java.time.format.DateTimeFormatter.ofPattern("HH:mm"));
-        return JacksonUtility.getJsonMapper().createObjectNode().put("result", result);
-      } catch (Exception e) {
-        throw new ExecutionPlanException("convertISO8601To24Hour failed: " + e.getMessage(), e);
-      }
-    });
-
-    // Convert ISO 8601 datetime to date only (e.g., "2024-12-06")
-    registry.register("convertISO8601ToDate", (input) -> {
-      try {
-        String iso = input.has("iso") ? input.get("iso").asText() : null;
-        if (iso == null || iso.isEmpty()) {
-          throw new ExecutionPlanException("convertISO8601ToDate: missing 'iso' parameter");
-        }
-        java.time.Instant instant = java.time.Instant.parse(iso);
-        java.time.LocalDate date = instant.atZone(java.time.ZoneId.systemDefault()).toLocalDate();
-        String result = date.toString();
-        return JacksonUtility.getJsonMapper().createObjectNode().put("result", result);
-      } catch (Exception e) {
-        throw new ExecutionPlanException("convertISO8601ToDate failed: " + e.getMessage(), e);
-      }
-    });
-
-    // Convert string number to number type
-    registry.register("convertStringToNumber", (input) -> {
-      try {
-        String str = input.has("value") ? input.get("value").asText() : null;
-        if (str == null || str.isEmpty()) {
-          throw new ExecutionPlanException("convertStringToNumber: missing 'value' parameter");
-        }
-        double num = Double.parseDouble(str);
-        return JacksonUtility.getJsonMapper().createObjectNode().put("result", num);
-      } catch (Exception e) {
-        throw new ExecutionPlanException("convertStringToNumber failed: " + e.getMessage(), e);
-      }
-    });
-
-    // Convert string boolean to boolean type
-    registry.register("convertStringToBoolean", (input) -> {
-      try {
-        String str = input.has("value") ? input.get("value").asText() : null;
-        if (str == null || str.isEmpty()) {
-          throw new ExecutionPlanException("convertStringToBoolean: missing 'value' parameter");
-        }
-        boolean bool = "true".equalsIgnoreCase(str);
-        return JacksonUtility.getJsonMapper().createObjectNode().put("result", bool);
-      } catch (Exception e) {
-        throw new ExecutionPlanException("convertStringToBoolean failed: " + e.getMessage(), e);
-      }
-    });
-  }
-
 }
